[gd_scene load_steps=2 format=3 uid="uid://cyxid343wvhg2"]

[ext_resource type="Script" path="res://scenes/menu/floor_select_card/floor_select_card.gd" id="1_6bpme"]

[node name="FloorSelectCard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1163.0
offset_bottom = -613.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_6bpme")

[node name="Background" type="Panel" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="FloorNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "FLOOR NAME"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="FloorDescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="FloorPreviewTexture" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
